Fix #56 Resolve Logon User Always
The logon user is special and maybe the network name when placed
on the command line. So we should always resolve it to and ID as
that's the internal representation we manage.

Signed-off-by: David Brown <dmlb2000@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,8 @@ services:
     - archiveinterface:archivei
     volumes:
     - cartddata:/shared
+    ports:
+    - 8081:8081
     environment:
       PEEWEE_ADDR: mysql
       BROKER_URL: pyamqp://guest:guest@amqp:5672//
