--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,3 @@
--r requirements.txt
 autopep8
 coverage
 pacifica-archiveinterface
@@ -12,5 +11,8 @@ pre-commit
 pylint
 pytest
 radon
+readthedocs-sphinx-ext
 recommonmark
-redis<3.4
+redis
+sphinx
+sphinx-rtd-theme
